Закончил преимущества, карточки товаров, фильтры в процессе

--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -21,7 +21,7 @@
   }
 }
 
-.header__centerer {
+.header__container {
   display: grid;
   grid-template-columns: repeat(2, auto);
   justify-content: space-between;
@@ -33,7 +33,6 @@
   @media #{$desktop-only} {
     grid-template-columns: repeat(4, auto);
     justify-content: start;
-
   }
 }
 
