--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,13 +1,23 @@
 /* GLOBAL */
-@import "global/variables";
-@import "global/global";
-@import "global/fonts";
-@import "global/media";
+@import "global/variables.scss";
+@import "global/global.scss";
+@import "global/fonts.scss";
+@import "global/media.scss";
 
 /* BLOCKS */
-@import "blocks/header";
-@import "blocks/page";
+@import "blocks/heading.scss";
+@import "blocks/button.scss";
+@import "blocks/page.scss";
+@import "blocks/header.scss";
 @import "blocks/user-navigation.scss";
 @import "blocks/main-navigation.scss";
 @import "blocks/slider.scss";
 @import "blocks/main-index.scss";
+@import "blocks/badge.scss";
+@import "blocks/features.scss";
+@import "blocks/catalog.scss";
+@import "blocks/filters-form.scss";
+@import "blocks/price.scss";
+@import "blocks/item.scss";
+@import "blocks/milk-availability.scss";
+@import "blocks/origin-country.scss";
