--- a/source/sass/blocks/features.scss
+++ b/source/sass/blocks/features.scss
@@ -27,14 +27,14 @@
   list-style-type: none;
 
   @media #{$tablet-only} {
-    grid-template-columns: repeat(2, auto);
+    grid-template-columns: repeat(2, 1fr);
     padding: 60px 10px 0 10px;
-    row-gap: 50px;
+    row-gap: 48px;
     column-gap: 30px;
   }
 
   @media #{$desktop-only} {
-    grid-template-columns: repeat(4, auto);
+    grid-template-columns: repeat(4, 1fr);
     padding: 80px 0 0 0;
   }
 }
@@ -79,6 +79,7 @@
 
     @media #{$tablet-only} {
       grid-row: 1 / 3;
+      margin-bottom: auto;
     }
   }
 }
@@ -86,6 +87,11 @@
 .features__item-heading {
   margin-top: 10px;
   margin-bottom: 4px;
+
+  @media #{$tablet-only} {
+    margin-top: 0;
+    margin-bottom: 2px;
+  }
 
   @media #{$desktop-only} {
     margin-top: 20px;
@@ -95,6 +101,12 @@
 
 .features__item-description {
   margin: 0;
+  line-height: 20px;
+
+  @media #{$not-mobile} {
+    font-size: 16px;
+    line-height: 24px;
+  }
 }
 
 .features__heading {
