--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -1,5 +1,15 @@
 .header {
-  position: relative;
+  display: grid;
+  grid-template-columns: repeat(2, auto);
+  justify-content: space-between;
+
+  @media #{$tablet-only} {
+    grid-template-columns: repeat(3, auto);
+  }
+
+  @media #{$desktop-only} {
+    display: flex;
+  }
 }
 
 .header__logo {
@@ -21,21 +31,6 @@
   }
 }
 
-.header__container {
-  display: grid;
-  grid-template-columns: repeat(2, auto);
-  justify-content: space-between;
-
-  @media #{$tablet-only} {
-    grid-template-columns: repeat(3, auto);
-  }
-
-  @media #{$desktop-only} {
-    grid-template-columns: repeat(4, auto);
-    justify-content: start;
-  }
-}
-
 .header__description {
   display: none;
 
@@ -46,7 +41,7 @@
   @media #{$desktop-only} {
     grid-column: 2 / 3;
     display: block;
-    margin: 24px auto 24px 20px;
+    margin: 24px 162px 24px 20px;
   }
 }
 
@@ -59,9 +54,8 @@
   }
 
   @media #{$desktop-only} {
-    margin-left: 162px;
     margin-right: 40px;
-    grid-column: 4 / 5;
+    order: 4;
   }
 }
 
@@ -72,27 +66,6 @@
   @media #{$not-mobile} {
     display: none;
   }
-
-  // @media #{$mobile-only} {
-  //   &--closed-navigation {
-  //     --menu-icon: url("../../img/icons/stack.svg#burger") no-repeat center;
-  //   }
-
-  //   &--opened-navigation {
-  //     --menu-icon: url("../../img/icons/stack.svg#close") no-repeat center;
-  //   }
-
-  //   &::before {
-  //     position: absolute;
-  //     display: block;
-  //     content: "";
-  //     top: 22px;
-  //     left: 22px;
-  //     width: 16px;
-  //     height: 16px;
-  //     background: var(--menu-icon);
-  //   }
-  // }
 }
 
 .header__user-navigation-toggle {
@@ -102,6 +75,10 @@
   border: none;
   background: none;
   cursor: pointer;
+
+  &:active {
+    background: #f0ebff;
+  }
 
   @media #{$mobile-only} {
     &--closed-navigation {
@@ -126,7 +103,6 @@
 }
 
 .header__main-navigation {
-
   @media #{$not-mobile} {
     grid-column: 2 / 3;
     grid-row: 1 / 2;
@@ -134,6 +110,6 @@
 
   @media #{$desktop-only} {
     grid-column: 3 / 4;
-    margin-left: 162px;
+    margin-right: auto;
   }
 }
