--- a/source/sass/blocks/heading.scss
+++ b/source/sass/blocks/heading.scss
@@ -21,6 +21,12 @@
     }
   }
 
+  &--lvl-4 {
+    color: #7859cf;
+    line-height: 20px;
+    letter-spacing: 0.28px;
+  }
+
   &--slide-heading {
     font-size: 36px;
     line-height: 48px;
@@ -39,6 +45,6 @@
     line-height: 16px;
     letter-spacing: 0.48px;
     text-transform: uppercase;
-    color: #7859CF;
+    color: #7859cf;
   }
 }
