--- a/source/sass/blocks/item.scss
+++ b/source/sass/blocks/item.scss
@@ -2,16 +2,20 @@
   display: grid;
   grid-template-columns: auto 141px;
   padding: 40px 20px 20px;
-  background: #FFFFFF;
+  background: #ffffff;
+
+  @media #{$not-mobile} {
+    padding: 50px 30px 30px;
+  }
 }
 
 .item picture {
   grid-column: 1 / 3;
   text-align: center;
-  margin-bottom: 24px;
+  margin-bottom: 20px;
 
   @media #{$not-mobile} {
-    margin-bottom: 30px;
+    margin-bottom: 26px;
   }
 }
 
@@ -28,6 +32,7 @@
   grid-column: 1 / 3;
   margin: 0;
   margin-bottom: 16px;
+  line-height: 20px;
 
   @media #{$not-mobile} {
     margin-bottom: 20px;
@@ -40,4 +45,19 @@
   font-size: 20px;
   font-weight: 600;
   line-height: 32px;
+}
+
+.item__order-button {
+  display: flex;
+  gap: 6px;
+  font-size: 14px;
+  line-height: 20px;
+
+  &::before {
+    content: "";
+    width: 20px;
+    height: 16px;
+    mask: url("../../img/icons/stack.svg#buy-basket") no-repeat center;
+    background: #ffffff;
+  }
 }
