--- a/source/sass/blocks/milk-availability.scss
+++ b/source/sass/blocks/milk-availability.scss
@@ -14,54 +14,75 @@
 .milk-availability__label {
   display: flex;
   gap: 10px;
-  font-size: 16px;
-  line-height: 24px;
 }
 
 .milk-availability__input {
-	--radio-size: 24px;
-	--checked-size: 16px;
-	appearance: none;
-	display: grid;
-	margin: 0;
+  --radio-size: 24px;
+  --checked-size: 16px;
+  appearance: none;
+  display: grid;
+  margin: 0;
 
-	// &:hover {
-	// 	--border-color: #bababa;
-	// }
+  &:hover,
+  &:focus {
+    --border-color: #9070ec;
+    --checked-radio-content: "";
+    --radio-opacity: 0.25;
+    cursor: pointer;
+  }
 
-	&:disabled {
-		--border-color: #E2E2E2;
-    color: #E2E2E2;
+  &:checked {
+    --checked-radio-content: "";
+    --border-color: #7859cf;
 
-		+ .milk-availability__label-name {
-			color: #E2E2E2;
-		}
-	}
-
-	&::before {
-		content: "";
-		box-sizing: border-box;
-		width: var(--radio-size);
-		height: var(--radio-size);
-		border: 2px solid ;
-		border-color: var(--border-color, #BDBDBD);
-		background: #ffffff;
-		border-radius: 50%;
-		grid-area: 1 / 1 / 2 / 2;
-	}
-
-	&:checked {
-    --border-color: #7859CF;
-
-    &::after {
-      content: "";
-      width: var(--checked-size);
-      height: var(--checked-size);
-      background-color: #7859CF;
-      border-radius: 50%;
-      grid-area: 1 / 1 / 2 / 2;
-      align-self: center;
-      justify-self: center;
+    &:hover,
+    &:focus {
+      --radio-opacity: 1;
     }
+  }
+
+  &:disabled {
+    --border-color: #e2e2e2;
+    color: #e2e2e2;
+    cursor: default;
+
+    +.milk-availability__label-name {
+      color: #e2e2e2;
+    }
+
+    &:hover,
+    &:focus,
+    &:active {
+      --checked-radio-content: none;
+    }
+
+    &:checked {
+      --checked-radio-content: "";
+      --checked-background-color: #e2e2e2;
+    }
+  }
+
+  &::before {
+    content: "";
+    box-sizing: border-box;
+    width: var(--radio-size);
+    height: var(--radio-size);
+    border: 2px solid;
+    border-color: var(--border-color, #bdbdbd);
+    background: #ffffff;
+    border-radius: 50%;
+    grid-area: 1 / 1 / 2 / 2;
+  }
+
+  &::after {
+    content: var(--checked-radio-content);
+    width: var(--checked-size);
+    height: var(--checked-size);
+    background-color: var(--checked-background-color, #7859cf);
+    border-radius: 50%;
+    grid-area: 1 / 1 / 2 / 2;
+    align-self: center;
+    justify-self: center;
+    opacity: var(--radio-opacity, 1);
   }
 }
