--- a/source/sass/blocks/page.scss
+++ b/source/sass/blocks/page.scss
@@ -1,13 +1,15 @@
 .page {
-	height: 100%;
-	font-family: var(--main-font);
-	font-size: 14px;
-	line-height: 18px;
+  font-family: var(--main-font);
+  font-size: 14px;
+  line-height: 18px;
 }
 
 .page__body {
-	margin: 0;
-	min-height: 100%;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  margin: 0 auto;
+  min-height: 100%;
 }
 
 .page__centerer {
