--- a/source/sass/blocks/slider.scss
+++ b/source/sass/blocks/slider.scss
@@ -1,63 +1,42 @@
-.slider {
-  display: flex;
-  transition: transform 0.5s ease-in-out;
-}
-
 .slider__slide {
-  display: grid;
+  display: none;
   grid-template-rows: 280px repeat(4, auto);
   text-align: center;
-  padding: 20px 0 60px;
-
-  min-width: 100%;
+  padding-top: 20px;
+  padding-bottom: 60px;
+  width: 280px;
   position: relative;
 
   @media #{$tablet-only} {
+    width: 608px;
     grid-template-rows: repeat(4, auto) 476px;
-    padding: 60px 0 0;
-    --slider-background-height: 640px;
+    padding-top: 60px;
+    padding-bottom: 0;
   }
 
   @media #{$desktop-only} {
+    width: 1280px;
     grid-template-columns: 625px auto;
     grid-template-rows: 170px 96px 136px auto;
     text-align: start;
-    padding: 30px 0 84px;
+    padding-top: 30px;
+    padding-bottom: 80px;
     column-gap: 30px;
-    --slider-background-height: 714px;
   }
 
-  &--flat-white-bg {
-    --slider-background-color: #F3EBE1;
-  }
-
-  &--lavender-bg {
-    --slider-background-color: #EAE6FC;
-  }
-
-  &--espresso-bg {
-    --slider-background-color: #E5E6E8;
-  }
-
-  &::before {
-    z-index: -1;
-    position: absolute;
-    display: block;
-    content: "";
-    width: 100vw;
-    height: var(--slider-background-height, 656px);
-    top: 0;
-    left: 0;
-    background: var(--slider-background-color, #F3EBE1);
+  &--active {
+    display: grid;
   }
 }
 
 .slider__badge {
   grid-row: 2 / 3;
   margin-bottom: 4px;
+  margin-top: 10px;
 
   @media #{$not-mobile} {
     grid-row: 1 / 2;
+    margin-top: 0;
   }
 
   @media #{$desktop-only} {
@@ -74,12 +53,14 @@
 }
 
 .slider__description {
+  min-height: 100px;
   margin: 0;
   margin-bottom: 20px;
   font-size: 14px;
   line-height: 20px;
 
   @media #{$not-mobile} {
+    min-height: 0;
     font-size: 20px;
     line-height: 32px;
   }
@@ -130,7 +111,7 @@
 
   &--old {
     text-decoration: line-through;
-    color: #7859CF;
+    color: #7859cf;
     font-size: 16px;
     font-weight: 400;
   }
