--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -3,6 +3,7 @@
 @import "global/global.scss";
 @import "global/fonts.scss";
 @import "global/media.scss";
+@import "global/nouislider.min.scss";
 
 /* BLOCKS */
 @import "blocks/heading.scss";
@@ -21,3 +22,9 @@
 @import "blocks/item.scss";
 @import "blocks/milk-availability.scss";
 @import "blocks/origin-country.scss";
+@import "blocks/label-name.scss";
+@import "blocks/map.scss";
+@import "blocks/social-list.scss";
+@import "blocks/footer.scss";
+@import "blocks/footer-navigation.scss";
+@import "blocks/contacts.scss";
