--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -78,7 +78,7 @@
     content: "";
     width: 12px;
     height: 16px;
-    mask: url("../../img/icons/stack.svg#HTMLAcademy") no-repeat center;
+    mask: url("../../images/icons/stack.svg#HTMLAcademy") no-repeat center;
     background: var(--icon-color, #bdbdbd);
   }
 }
