--- a/source/sass/blocks/item.scss
+++ b/source/sass/blocks/item.scss
@@ -57,7 +57,7 @@
     content: "";
     width: 20px;
     height: 16px;
-    mask: url("../../img/icons/stack.svg#buy-basket") no-repeat center;
+    mask: url("../../images/icons/stack.svg#buy-basket") no-repeat center;
     background: #ffffff;
   }
 }
