--- a/source/sass/blocks/price.scss
+++ b/source/sass/blocks/price.scss
@@ -88,7 +88,7 @@
     width: 8px;
     height: 2px;
     left: -4px;
-    background: url("../../img/icons/stack.svg#dash") no-repeat center;
+    background: url("../../images/icons/stack.svg#dash") no-repeat center;
   }
 }
 
