--- a/source/sass/blocks/user-navigation.scss
+++ b/source/sass/blocks/user-navigation.scss
@@ -55,11 +55,11 @@
   }
 
   &--account {
-    --navigation-icon: url("../../img/icons/stack.svg#account") no-repeat center;
+    --navigation-icon: url("../../images/icons/stack.svg#account") no-repeat center;
   }
 
   &--basket {
-    --navigation-icon: url("../../img/icons/stack.svg#basket") no-repeat center;
+    --navigation-icon: url("../../images/icons/stack.svg#basket") no-repeat center;
   }
 
   &::before {
