--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -60,7 +60,7 @@
 }
 
 .catalog__filters-form {
-  margin-bottom: 40px;
+  margin-bottom: 35px;
 
   @media #{$desktop-only} {
     grid-column: 1 / 2;
@@ -94,6 +94,10 @@
   border-radius: 4px;
   background: #ffffff;
 
+  @media #{$mobile-only} {
+    --content: "";
+  }
+
   &:hover,
   &:focus,
   &:active,
@@ -116,12 +120,12 @@
   }
 
   &--prev {
-    --arrow-icon: url("../../img/icons/stack.svg#pagination-arrow-prev") no-repeat center;
+    --arrow-icon: url("../../images/icons/stack.svg#pagination-arrow-prev") no-repeat center;
     --arrow-position: 16px;
   }
 
   &--next {
-    --arrow-icon: url("../../img/icons/stack.svg#pagination-arrow-next") no-repeat center;
+    --arrow-icon: url("../../images/icons/stack.svg#pagination-arrow-next") no-repeat center;
     --arrow-position: 18px;
   }
 
@@ -148,16 +152,14 @@
     }
 
     &::before {
-      @media #{$mobile-only} {
-        position: absolute;
-        content: "";
-        top: 15px;
-        left: var(--arrow-position);
-        width: 6px;
-        height: 10px;
-        mask: var(--arrow-icon);
-        background: var(--arrow-color, #7859cf);
-      }
+      position: absolute;
+      content: var(--content);
+      top: 15px;
+      left: var(--arrow-position);
+      width: 6px;
+      height: 10px;
+      mask: var(--arrow-icon);
+      background: var(--arrow-color, #7859cf);
     }
   }
 }
@@ -165,5 +167,54 @@
 .catalog__pagination-label {
   @media #{$mobile-only} {
     display: none;
+  }
+}
+
+.catalog__sort-selector-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 8px;
+  margin-bottom: 15px;
+
+  @media #{$not-mobile} {
+    justify-content: end;
+    gap: 20px;
+    margin-bottom: 28px;
+  }
+
+  @media #{$desktop-only} {
+    margin-bottom: 24px;
+  }
+}
+
+.catalog__sort-selector-label {
+  font-weight: 600;
+}
+
+.catalog__sort-selector {
+  position: relative;
+  font-family: var(--main-font);
+  font-size: 16px;
+  font-weight: 600;
+  line-height: 24px;
+  appearance: none;
+  color: #7859cf;
+  background-image: url("../../images/icons/stack.svg#sort-down-arrow");
+  background-color: transparent;
+  background-repeat: no-repeat;
+  background-position: 140px;
+  background-size: 10px;
+  border: none;
+  border-radius: 4px;
+  padding: 4px 0 4px 10px;
+
+  &:hover,
+  &:focus {
+    background-color: #f0ebff;
+  }
+
+  &:active {
+    background-image: url("../../images/icons/stack.svg#sort-up-arrow");
   }
 }
