--- a/source/sass/blocks/features.scss
+++ b/source/sass/blocks/features.scss
@@ -53,19 +53,19 @@
   }
 
   &--speed {
-    --features-icon: url("../../img/icons/stack.svg#features-speed") no-repeat center;
+    --features-icon: url("../../images/icons/stack.svg#features-speed") no-repeat center;
   }
 
   &--energy {
-    --features-icon: url("../../img/icons/stack.svg#features-energy") no-repeat center;
+    --features-icon: url("../../images/icons/stack.svg#features-energy") no-repeat center;
   }
 
   &--fit {
-    --features-icon: url("../../img/icons/stack.svg#features-fit") no-repeat center;
+    --features-icon: url("../../images/icons/stack.svg#features-fit") no-repeat center;
   }
 
   &--eco {
-    --features-icon: url("../../img/icons/stack.svg#features-eco") no-repeat center;
+    --features-icon: url("../../images/icons/stack.svg#features-eco") no-repeat center;
   }
 
   &::before {
