--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -82,11 +82,11 @@
 
   @media #{$mobile-only} {
     &--closed-navigation {
-      --menu-icon: url("../../img/icons/stack.svg#burger") no-repeat center;
+      --menu-icon: url("../../images/icons/stack.svg#burger") no-repeat center;
     }
 
     &--opened-navigation {
-      --menu-icon: url("../../img/icons/stack.svg#close") no-repeat center;
+      --menu-icon: url("../../images/icons/stack.svg#close") no-repeat center;
     }
 
     &::before {
