--- a/source/sass/blocks/page.scss
+++ b/source/sass/blocks/page.scss
@@ -1,4 +1,5 @@
 .page {
+  height: 100%;
   font-family: var(--main-font);
   font-size: 14px;
   line-height: 18px;
@@ -10,6 +11,7 @@
   flex-direction: column;
   margin: 0 auto;
   min-height: 100%;
+  min-width: 320px;
 }
 
 .page__centerer {
